# ThermCtrl

./: .gitmodules  CMakeLists.txt  ThermCtrl.pro  ThermCtrl_.pro  automatic.cpp  automatic.h  axistag.cpp  chartview.cpp  chartview.h  customplot.cpp  customplot.h  doublespinbox.h  irt5502.cpp  irt5502.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointmodel.cpp  pointmodel.h  rc.qrc  thermctrl.cpp  thermctrl.h  thermctrl.ui  version.h
CommonInterfaces/: CommonInterfaces.pri  commoninterfaces.h
ElemerAscii/: ElemerAscii.pri  README.md  ascii_device.cpp  ascii_device.h  common_types.h  elemer_ascii.h  port.cpp  port.h
ElemerDevice/: ElemerDevice.pri  ed_common_types.h  ed_device.cpp  ed_device.h  ed_port.cpp  ed_port.h  ed_utils.h
ThermCtrl/: Common.dcu  Common.pas  LowLvlCom.PAS  LowLvlCom.dcu  MdlLvlCom.dcu  MdlLvlCom.pas  README.md  ThHCC.dcu  ThHCC.pas  ThermCtrl.7z  ThermCtrl.dcu  ThermCtrl.dfm  ThermCtrl.pas  ThermCtrl.pro  ThermoCtrl.dpr  ThermoCtrl.dproj  ThermoCtrl.dproj.local  ThermoCtrl.dsk  ThermoCtrl.identcache  ThermoCtrl.res  ThermoCtrl.~dsk  Time.dcu  Time.dfm  Time.pas  auto.cpp  auto.h  automatic.cpp  automatic.h  chartview.cpp  config.txt  irt5502.cpp  irt5502.h  main.cpp  mainwindow.cpp  mainwindow.ui  pointmodel.h
res/: resources.qrc
res/icons/ggeasy-dark/: index.theme
res/icons/ggeasy-light/: index.theme
